ecsw-2048 added ipv6/ipv6 ip address/gateway info in workload instances state information
